--- a/style.css
+++ b/style.css
@@ -6,21 +6,27 @@ a {
   text-decoration: none;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 header {
   display: flex;
   flex-direction: row;
-
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
   justify-content: space-between;
   align-items: center;
   padding: 30px 60px;
-  background-color: chartreuse;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(240, 253, 51);
 }
 
 header > .left-pos > a {
   font-size: 30px;
-  font-weight: 700;
-  color: black;
+  color: rgb(5, 47, 116);
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 header > .right-pos {
@@ -29,9 +35,10 @@ header > .right-pos {
 }
 
 .right-pos > a {
-  margin: 0 8px;
+  margin: 0 10px;
   color: black;
   font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .hero-section {
@@ -47,20 +54,26 @@ header > .right-pos {
 }
 
 .items-section {
-  margin-top: 80px;
+  margin: 80px 0px;
   width: 100%;
   background-color: aquamarine;
-  padding: 30px 30px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   flex-direction: row;
+}
+
+.items-section > .item-not-found {
+  margin: 110px 0px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(103, 99, 99);
 }
 
 .item {
   padding: 10px;
   background-color: white;
   width: 300px;
-  margin: 30px 30px;
+  margin: 30px 20px;
   transition: 0.2s;
 }
 
@@ -84,7 +97,7 @@ header > .right-pos {
 }
 
 .item-details > .label {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: bold;
   margin: 8px 0;
 }
@@ -102,4 +115,73 @@ header > .right-pos {
 
 .item-price-cart > img {
   width: 30px;
+}
+
+.add-to-cart-button {
+  transition: 0.1s;
+}
+
+.add-to-cart-button:hover {
+  transform: scale(1.1);
+}
+
+.add-to-cart-button:active {
+  transform: scale(1.3);
+}
+
+footer {
+  width: 100%;
+  background-color: rgb(19, 17, 17);
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+footer > div {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+footer > div > h2 {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 6px;
+  text-decoration-thickness: 6px;
+  margin-bottom: 10px;
+}
+
+footer > div > a {
+  margin: 5px 0px;
+  color: rgb(186, 186, 184);
+}
+
+.category-section {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  margin-top: 30px;
+}
+
+.category-section > p {
+  margin: 20px;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 50px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  transition: 0.2s;
+  background-color: rgb(19, 15, 15);
+  cursor: pointer;
+}
+
+.category-section > p:hover {
+  transform: scale(1.2);
+}
+
+.category-section > p:active {
+  transform: scale(0.99);
 }
